# ReVINS

./: CMakeLists.txt  README.md  build.sh
config_example/: EuRoC.yaml  TUMVI.yaml
config_example/TUMVI_timestamp/corridor1/: data.csv
config_example/TUMVI_timestamp/corridor2/: data.csv
config_example/TUMVI_timestamp/corridor3/: data.csv
config_example/TUMVI_timestamp/corridor4/: data.csv
config_example/TUMVI_timestamp/corridor5/: data.csv
config_example/TUMVI_timestamp/magistrale1/: data.csv
config_example/TUMVI_timestamp/magistrale2/: data.csv
config_example/TUMVI_timestamp/magistrale3/: data.csv
config_example/TUMVI_timestamp/magistrale4/: data.csv
config_example/TUMVI_timestamp/magistrale5/: data.csv
config_example/TUMVI_timestamp/magistrale6/: data.csv
config_example/TUMVI_timestamp/outdoors2/: data.csv
config_example/TUMVI_timestamp/outdoors3/: data.csv
config_example/TUMVI_timestamp/outdoors4/: data.csv
config_example/TUMVI_timestamp/outdoors5/: data.csv
config_example/TUMVI_timestamp/outdoors6/: data.csv
config_example/TUMVI_timestamp/outdoors7/: data.csv
config_example/TUMVI_timestamp/room1/: data.csv
result/: result_loop.tum  result_no_loop.tum
src/: drawer.cc  drawer.h  main.cc  settings.cc  settings.h
src/camera/: camera.cc  camera.h  camera_model.cc  camera_model.h  equidistant_camera.cc  equidistant_camera.h  pinhole_camera.cc  pinhole_camera.h
src/loopclosing/: ceresloop.h  keyframe.cc  keyframe.h  orb.cc  orb.h  pnp.cc  pnp.h  pose_graph.cc  pose_graph.h
src/optimization/: ceres_factor.h  estimator.cc  estimator.h  feature_manager.cc  feature_manager.h  initializer.cc  initializer.h  margin.cc  margin.h
src/preprocessor/: image_processor.cc  image_processor.h  imu_processor.cc  imu_processor.h
src/utils/: io.cc  io.h  lie_group.cc  lie_group.h  string.cc  timer.cc  timer.h
(+9 files in other folders)
